--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head></head>
   <body>
-    <div id="react"></div>
-    <div id="react1"></div>
+    <div id="react" ></div>
+    <div id="react1" style="display: flex;"></div>
     <script src="/dist/single-spa.config.js"></script>
     <script src="https://unpkg.com/regenerator-runtime@0.13.1/runtime.js"></script>
   </body>
